# cosmic-ext-weather

./: .gitignore  Cargo.toml  README.md  justfile
data/: io.github.cosmic_utils.weather-applet.desktop  io.github.cosmic_utils.weather-applet.metainfo.xml
i18n/bg/: cosmic_ext_applet_weather.ftl
i18n/cs/: cosmic_ext_applet_weather.ftl
i18n/en/: cosmic_ext_applet_weather.ftl
i18n/es/: cosmic_ext_applet_weather.ftl
i18n/fi/: cosmic_ext_applet_weather.ftl
i18n/pl/: cosmic_ext_applet_weather.ftl
i18n/ru/: cosmic_ext_applet_weather.ftl
i18n/sv/: cosmic_ext_applet_weather.ftl
src/: applet.rs  config.rs  weather.rs
