[package]
name = "cosmic-ext-applet-weather"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0"
authors = ["rwxroot <rwxroot@proton.me>", "e.rollando <e.rollando@duck.com>"]
homepage = "https://github.com/cosmic-utils/cosmic-ext-applet-weather/"
repository = "https://github.com/cosmic-utils/cosmic-ext-applet-weather.git"

[profile.release]
lto = "fat"
opt-level = 3

[dependencies]
chrono = { version = "0.4.42", default-features = false }
i18n-embed = { version = "0.16.0", default-features = false, features = [
	"rust-embed",
	"fluent-system",
	"desktop-requester",
] }
i18n-embed-fl = { version = "0.10.0", default-features = false }
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
	"applet",
] }
reqwest = { version = "0.12.24", default-features = false, features = [
	"json",
	"rustls-tls",
] }
rust-embed = { version = "8.9.0", default-features = false }
serde = "1.0.228"
tracing = { version = "0.1.41", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
	"ansi",
	"env-filter",
] }
